--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,15 +9,15 @@
     </h3>
     <div>
         <label for="name">Imie</label>
-        <input type="text" name="name" id="name" required>
+        <input type="text" name="name" id="name" placeholder="Wpisz imię" required>
     </div>
     <div>
         <label for="email">E-mail</label>
-        <input type="email" name="email" id="email" required>
+        <input type="email" name="email" id="email" placeholder="Wpisz adres e-mail" required>
     </div>
     <div>
         <label for="password">Hasło</label> 
-        <input type="text" name="password" id="password" required>
+        <input type="text" name="password" id="password" placeholder="Wpisz hasło" required>
     </div>
     <button type="submit" class="btn btn-primary"> Zarejestruj</button>
     <br><br>
