--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,7 +17,7 @@
     </div>
     <div>
         <label for="password">Hasło</label> 
-        <input type="text" name="password" id="password" placeholder="Wpisz hasło" required>
+        <input type="password" name="password" id="password" placeholder="Wpisz hasło" required>
     </div>
     <button type="submit" class="btn btn-primary"> Zarejestruj</button>
     <br><br>
