--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
     </div>
     <div>
         <label for="password">Hasło</label>
-        <input type="text" name="password" id="password"placeholder="Wpisz hasło" required>
+        <input type="password" name="password" id="password"placeholder="Wpisz hasło" required>
     </div>
     <button type="submit" class="btn btn-primary"> Zaloguj się</button>
     <br><br>
